# XMLGameEngine

./: .gitignore  CMakeLists.txt  readme.md
XMLGameEngine/: CMakeLists.txt  engine.cpp  game.cpp  game_expr.cpp  game_sfml.cpp  game_xml.cpp  main.cpp  object.cpp  states.cpp  utils.cpp
XMLGameEngine/assets/: xmlgameengine.xsd
XMLGameEngine/games/: breakout.xml  pong.xml
XMLGameEngine/include/: engine.h  game.h  game_expr.h  game_sfml.h  game_xml.h  game_xml2.h  object.h  states.h  utils.h
games/: breakout.xml  pong.xml  pong_full.xml  spaceinvaders.xml
games/assets/: xmlgameengine.xsd
include/: engine.h  game.h  game_expr.h  game_sfml.h  game_xml.h  object.h
scripts/cmake/: assets.cmake  dependencies.cmake  options.cmake  platform.cmake  targets.cmake
scripts/shell/: apt-deps.sh  apt-prereqs.sh  apt-tools.sh  dnf-deps.sh  dnf-prereqs.sh  dnf-tools.sh  pacman-deps.sh  pacman-prereqs.sh  pacman-tools.sh
source/: engine.cpp  game.cpp  game_expr.cpp  game_sfml.cpp  game_xml.cpp  main.cpp  object.cpp  states.cpp  utils.cpp
source/include/: engine.h  game.h  game_expr.h  game_sfml.h  game_xml.h  object.h  states.h  utils.h
